--- a/docs/styles/nav.css
+++ b/docs/styles/nav.css
@@ -1,6 +1,6 @@
 nav {
     width: 100%;
-    position: fixed;
+    position: sticky;
     top: 0;
 }
 
